add homepage to package

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://manch0ffline.github.io/AB_AutoCheck",
+
   "scripts": {
    "dev": "vite",
     "build": "tsc -b && vite build",
