--- a/package.json
+++ b/package.json
@@ -4,20 +4,17 @@
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://manch0ffline.github.io/AB_AutoCheck",
-
   "scripts": {
-   "dev": "vite",
+    "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
-    
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "bootstrap": "^5.3.8",
     "classnames": "^2.5.1",
-    "gh-pages": "^6.3.0",
     "gsap": "^3.13.0",
     "i18next": "^25.6.3",
     "mathjs": "^15.1.0",
@@ -36,6 +33,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
